<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".MainUIFragment"
    android:background="@color/mainGray"
    >



    <TextView
        android:id="@+id/userList"
        android:text="@string/user_list"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_margin="@dimen/BASIC_MARGIN"
        android:textSize="@dimen/LABEL_TEXT_SIZE"
        />


    <ScrollView
        android:id="@+id/userScroll"
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:layout_margin="@dimen/BASIC_MARGIN"
        android:background="@drawable/border"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/userList"
        app:layout_constraintTop_toBottomOf="@id/userList"
        >

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/userRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </ScrollView>

    <TextView
        android:id="@+id/logText"
        android:text="@string/log"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/userScroll"
        android:layout_margin="@dimen/BASIC_MARGIN"
        android:textSize="@dimen/LABEL_TEXT_SIZE"

        />



    <Button
        android:id="@+id/add"
        android:text="@string/add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logView"
        app:layout_constraintBottom_toBottomOf="parent"
        android:background="@drawable/custom_button"
        android:layout_margin="8dp"
        android:layout_marginBottom="@dimen/BASIC_MARGIN"
        />
    <Button
        android:id="@+id/modify"
        android:text="@string/modify"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@+id/add"
        app:layout_constraintStart_toEndOf="@+id/add"
        android:background="@drawable/custom_button"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        />
    <Button
        android:id="@+id/delete"
        android:text="@string/delete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@+id/modify"
        app:layout_constraintStart_toEndOf="@id/modify"
        android:background="@drawable/custom_button"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        />

<!--    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/add"
        android:background="@drawable/custom_button"
        android:textColor="@color/white"
        android:layout_margin="8dp"
        />
        -->

    <ScrollView
        android:id="@+id/logView"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        app:layout_constraintTop_toBottomOf="@+id/logText"
        app:layout_constraintStart_toStartOf="parent"
        android:background="@drawable/border"
        android:layout_margin="@dimen/BASIC_MARGIN"
        >
        <TextView
            android:id="@+id/logData"
            android:text="@string/log_default"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/BASIC_MARGIN"
            app:layout_constraintTop_toBottomOf="@+id/logText"
            app:layout_constraintStart_toStartOf="parent"
            />

    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>