<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginHorizontal="32dp"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/userList"
        android:text="@string/user_list"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_margin="@dimen/BASIC_MARGIN" />

    <ScrollView
        android:id="@+id/userScroll"
        android:layout_width="match_parent"
        android:layout_height="400dp"
        app:layout_constraintStart_toStartOf="@id/userList"
        app:layout_constraintTop_toBottomOf="@id/userList"
        android:layout_margin="@dimen/BASIC_MARGIN"
        />
    <TextView
        android:id="@+id/logText"
        android:text="@string/log"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/userScroll"
        android:layout_margin="@dimen/BASIC_MARGIN"
        />
    <TextView
        android:id="@+id/logData"
        android:text="@string/log_default"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/BASIC_MARGIN"
        app:layout_constraintTop_toBottomOf="@+id/logText"
        app:layout_constraintStart_toStartOf="parent"
        />
    <Button
        android:id="@+id/add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logData"
        />
    <Button
        android:id="@+id/modify"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@+id/add"
        app:layout_constraintStart_toEndOf="@+id/add"
        />
    <Button
        android:id="@+id/delete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@+id/modify"
        app:layout_constraintStart_toEndOf="@id/modify"
        />



</androidx.constraintlayout.widget.ConstraintLayout>