<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".PersonalFragment"
    android:padding="@dimen/BASIC_MARGIN"
    android:background="@color/mainGray">

    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintVertical_chainStyle="spread"
        app:layout_constraintBottom_toTopOf="@+id/writeName"

        />

    <EditText
        android:id="@+id/writeName"
        android:layout_width="match_parent"
        android:layout_height="20dp"
        app:layout_constraintStart_toStartOf="@+id/name"
        app:layout_constraintTop_toBottomOf="@+id/name"
        app:layout_constraintVertical_chainStyle="spread"
        app:layout_constraintBottom_toTopOf="@+id/gender"
        android:inputType="text"
        android:background="@drawable/border"
        android:hint="@string/name_hint"
        />

    <TextView
        android:id="@+id/gender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gender"
        app:layout_constraintStart_toStartOf="@+id/writeName"
        app:layout_constraintTop_toBottomOf="@+id/writeName"
        app:layout_constraintVertical_chainStyle="spread"
        app:layout_constraintBottom_toTopOf="@+id/genderRadio"
        />

    <RadioGroup
        android:id="@+id/genderRadio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@+id/gender"
        app:layout_constraintTop_toBottomOf="@+id/gender"
        app:layout_constraintVertical_chainStyle="spread"
        app:layout_constraintBottom_toTopOf="@+id/birthday"
        android:orientation="horizontal"
        >

        <RadioButton
            android:id="@+id/male"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/male"
            android:checked="true"
            />

        <RadioButton
            android:id="@+id/female"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/female" />

    </RadioGroup>




    <TextView
        android:id="@+id/birthday"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/birthday"
        app:layout_constraintStart_toStartOf="@+id/genderRadio"
        app:layout_constraintTop_toBottomOf="@+id/genderRadio"
        app:layout_constraintVertical_chainStyle="spread"
        app:layout_constraintBottom_toTopOf="@+id/birth_year_spinner"
        />


    <Spinner
        android:id="@+id/birth_year_spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@+id/birthday"
        app:layout_constraintTop_toBottomOf="@+id/birthday"
        app:layout_constraintVertical_chainStyle="spread"
        app:layout_constraintBottom_toTopOf="@+id/no7"
        android:entries="@array/birth_year_ist"
        android:background="@color/white"
        />



    <TextView
        android:id="@+id/no7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hello_blank_fragment"
        app:layout_constraintStart_toStartOf="@+id/birth_year_spinner"
        app:layout_constraintTop_toBottomOf="@+id/birth_year_spinner"
        app:layout_constraintVertical_chainStyle="spread"
        app:layout_constraintBottom_toTopOf="@+id/no8"
        />

    <TextView
        android:id="@+id/no8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hello_blank_fragment"
        app:layout_constraintStart_toStartOf="@+id/no7"
        app:layout_constraintTop_toBottomOf="@+id/no7"
        app:layout_constraintVertical_chainStyle="spread"
        app:layout_constraintBottom_toTopOf="@+id/no9"
        />

    <TextView
        android:id="@+id/no9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hello_blank_fragment"
        app:layout_constraintStart_toStartOf="@+id/no8"
        app:layout_constraintTop_toBottomOf="@+id/no8"
        app:layout_constraintVertical_chainStyle="spread"
        app:layout_constraintBottom_toTopOf="@+id/no10"
        />

    <TextView
        android:id="@+id/no10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hello_blank_fragment"
        app:layout_constraintStart_toStartOf="@+id/no9"
        app:layout_constraintTop_toBottomOf="@+id/no9"
        app:layout_constraintVertical_chainStyle="spread"
        app:layout_constraintBottom_toTopOf="@+id/no11"
        />

    <TextView
        android:id="@+id/no11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hello_blank_fragment"
        app:layout_constraintStart_toStartOf="@+id/no10"
        app:layout_constraintTop_toBottomOf="@+id/no10"
        app:layout_constraintVertical_chainStyle="spread"
        app:layout_constraintBottom_toTopOf="@+id/no12"
        />

    <TextView
        android:id="@+id/no12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hello_blank_fragment"
        app:layout_constraintStart_toStartOf="@+id/no11"
        app:layout_constraintTop_toBottomOf="@+id/no11"
        app:layout_constraintVertical_chainStyle="spread"
        app:layout_constraintBottom_toTopOf="@+id/no13"
        />

    <TextView
        android:id="@+id/no13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hello_blank_fragment"
        app:layout_constraintStart_toStartOf="@+id/no12"
        app:layout_constraintTop_toBottomOf="@+id/no12"
        app:layout_constraintVertical_chainStyle="spread"
        app:layout_constraintBottom_toTopOf="@+id/no14"
        />

    <TextView
        android:id="@+id/no14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hello_blank_fragment"
        app:layout_constraintStart_toStartOf="@+id/no13"
        app:layout_constraintTop_toBottomOf="@+id/no13"
        app:layout_constraintVertical_chainStyle="spread"
        app:layout_constraintBottom_toTopOf="@+id/no15"
        />

    <TextView
        android:id="@+id/no15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hello_blank_fragment"
        app:layout_constraintStart_toStartOf="@+id/no14"
        app:layout_constraintTop_toBottomOf="@+id/no14"
        app:layout_constraintVertical_chainStyle="spread"
        app:layout_constraintBottom_toTopOf="@+id/no16"
        />

    <Button
        android:id="@+id/no16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="登録"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/no15"
        app:layout_constraintVertical_chainStyle="spread" />



</androidx.constraintlayout.widget.ConstraintLayout>